--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
 baseURL = "https://softwarewit.ch/"
 languageCode = "en-us"
-title = "Software is Witchcraft"
+title = "Softwarewitch"
 theme = "minos"
