--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "themes/minos"]
-	path = themes/minos
-	url = https://github.com/carsonip/hugo-theme-minos
+[submodule "themes/hugo-theme-minos"]
+	path = themes/hugo-theme-minos
+	url = https://github.com/stinaq/hugo-theme-minos
