--- a/config.toml
+++ b/config.toml
@@ -2,3 +2,4 @@ baseURL = "https://softwarewit.ch/"
 languageCode = "en-us"
 title = "Softwarewitch"
 theme = "hugo-theme-minos"
+googleAnalytics = "UA-140418210-1"
